syntax = "proto3";

package astar;

option go_package = "./pb";

// Service untuk Web Frontend
service StorefrontService {
  rpc ListAvailableProducts (Empty) returns (ProductListResponse);
  rpc GetProductDetail (ProductIDRequest) returns (ProductDetailResponse);
}

// Service untuk Mobile Admin Panel
service AdminService {
  // Product Management
  rpc ListAllProducts (Empty) returns (ProductListResponse);
  rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
  rpc UpdateProduct (UpdateProductRequest) returns (Empty);
  rpc DeleteProduct (ProductIDRequest) returns (Empty);

  // Order Management
  rpc ListPendingOrders (Empty) returns (OrderListResponse);
  rpc UpdateOrderStatus (UpdateStatusRequest) returns (Empty);
}

message Empty {}

message ProductIDRequest {
  int32 id = 1;
}

message Product {
  int32 id = 1;
  string name = 2;
  string category = 3;
  string description = 4;
  double price = 5;
  string image_url = 6;
  int32 stock = 7;
}

message ProductListResponse {
  repeated Product products = 1;
}

message ProductDetailResponse {
  Product product = 1;
}

message CreateProductRequest {
  string name = 1;
  string category = 2;
  string description = 3;
  double price = 4;
  string image_url = 5;
  int32 stock = 6;
}

message CreateProductResponse {
  int32 id = 1;
}

message UpdateProductRequest {
  int32 id = 1;
  string name = 2;
  string category = 3;
  string description = 4;
  double price = 5;
  string image_url = 6;
  int32 stock = 7;
}

message Order {
  int32 order_id = 1;
  string customer_name = 2;
  string phone_number = 3;
  string product_name = 4;
  string image_url = 5;
  double total_amount = 6;
  int32 quantity = 7;
  string status = 8;
  string order_date = 9;
}

message OrderListResponse {
  repeated Order orders = 1;
}

message UpdateStatusRequest {
  int32 order_id = 1;
  string status = 2;
}